--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -372,6 +372,16 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
+p {
+  border-left: 5px solid rgba(0, 0, 0, 0);
+  padding-left: 5px;
+}
+
+p:hover {
+  border-left: 5px solid #9ddcff;
+  box-sizing: border-box;
+}
+
 /**
  * Define consistent border, margin, and padding.
  */
@@ -618,6 +628,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 0;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 2.8em;
   font-weight: normal;
@@ -627,7 +638,6 @@ form {
 }
 
 #main-content h1:before {
-  margin-left: -0.9em;
   color: #9ddcff;
   content: "/";
 }
@@ -641,7 +651,7 @@ form {
   text-indent: 4px;
 }
 #main-content h2:before {
-  margin-left: -1.5em;
+  padding-left: -1.5em;
   content: "//";
   color: #9ddcff;
 }
